# TraceScope

./: .gitignore  Cargo.toml  README.md  sample.json
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  metrics.rs
src/app/: runner.rs
src/capture/: mod.rs
src/domain/: detection.rs  event.rs  mod.rs  rule.rs  score.rs
src/ingestion/: evtx.rs  json.rs  mod.rs  pcap.rs  syslog.rs
src/output/: cli.rs  json.rs  mod.rs  web.rs
src/pipeline/: correlator.rs  dispatcher.rs  mod.rs  normalizer.rs
src/plugins/: mod.rs
src/rules/: engine.rs  mod.rs  sigma.rs
src/rules/builtin/: account_creation.rs  archive_exfil.rs  av_tamper.rs  brute_force.rs  c2_beacon.rs  credential_dumping.rs  dns_tunneling.rs  download_cradle.rs  encoded_command.rs  file_dropper.rs  large_upload.rs  log_clear.rs  lolbin.rs  mod.rs  named_pipe.rs  office_macro.rs  pass_spray.rs  port_scan.rs  powershell_lateral.rs  psexec.rs  ransomware.rs  registry_persistence.rs  sched_task.rs  shadow_delete.rs  smb_lateral.rs  succ_after_fail.rs  sys_discovery.rs  uncommon_port.rs  wmi_abuse.rs
tests/: integration_test.rs
