[package]
name        = "tracescope"
version     = "0.2.0"
edition     = "2021"
description = "Next-generation async forensic correlation engine"
authors     = ["fasciste"]

[[bin]]
name = "tracescope"
path = "src/main.rs"

[lib]
name = "tracescope"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"

chrono = { version = "0.4", features = ["serde"] }
uuid   = { version = "1",   features = ["v4", "serde"] }

clap = { version = "4", features = ["derive"] }

tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

async-trait = "0.1"
thiserror   = "1"
anyhow      = "1"

# Native EVTX parsing — pure Rust, no C dependency
evtx = { version = "0.8", default-features = false }

# Native PCAP file reading — pure Rust, libpcap not required for offline analysis
pcap-file  = "2"
etherparse = "0.15"

# Web dashboard
axum       = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Prometheus metrics
metrics                     = "0.23"
metrics-exporter-prometheus = "0.15"

# Live packet capture — requires libpcap; feature-gated so the binary builds without it
pcap = { version = "2", optional = true }

[features]
default      = []
live-capture = ["dep:pcap"]

[dev-dependencies]
tokio-test  = "0.4"
async-trait = "0.1"
tempfile    = "3"
